@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2023, Hazelcast, Inc. All Rights Reserved.
+ * Copyright (c) 2008-2024, Hazelcast, Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,18 +16,16 @@
 
 package com.hazelcast.internal.util.phonehome;
 
-import java.io.UnsupportedEncodingException;
+import javax.annotation.Nonnull;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
-
-import static com.hazelcast.internal.util.ExceptionUtil.rethrow;
 
 /**
  * Util class for parameters of OS and EE PhoneHome pings.
  */
 public class PhoneHomeParameterCreator {
-
     private final StringBuilder builder;
     private final Map<String, String> parameters = new HashMap<>();
     private boolean hasParameterBefore;
@@ -42,14 +40,14 @@ public class PhoneHomeParameterCreator {
 
     /**
      * Adds a parameter with the provided {@code key} and the associated
-     * {@code value}.
-     *
-     * @param key the parameter key
-     * @param value the parameter value
+     * {@code value}. The key and value will be converted to string.
      */
-    public void addParam(String key, String value) {
-        if (parameters.containsKey(key)) {
-            throw new IllegalArgumentException("Parameter " + key + " is already added");
+    public void addParam(@Nonnull Object key, @Nonnull Object value) {
+        String keyStr = key.toString();
+        String valueStr = value.toString();
+
+        if (parameters.containsKey(keyStr)) {
+            throw new IllegalArgumentException("Parameter " + keyStr + " is already added");
         }
 
         if (hasParameterBefore) {
@@ -57,12 +55,8 @@ public class PhoneHomeParameterCreator {
         } else {
             hasParameterBefore = true;
         }
-        try {
-            builder.append(key).append("=").append(URLEncoder.encode(value, "UTF-8"));
-        } catch (UnsupportedEncodingException e) {
-            throw rethrow(e);
-        }
-        parameters.put(key, value);
+        builder.append(keyStr).append("=").append(URLEncoder.encode(valueStr, StandardCharsets.UTF_8));
+        parameters.put(keyStr, valueStr);
     }
 
     String build() {
