@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2023, Hazelcast, Inc. All Rights Reserved.
+ * Copyright (c) 2008-2024, Hazelcast, Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,7 +15,6 @@
  */
 package com.hazelcast.internal.util.phonehome;
 
-import com.google.common.collect.ImmutableMap;
 import com.hazelcast.config.AttributeConfig;
 import com.hazelcast.config.CacheConfig;
 import com.hazelcast.config.CacheSimpleConfig;
@@ -144,8 +143,10 @@ public class PhoneHomeTest extends HazelcastTestSupport {
         assertEquals(System.getProperty("java.version"), parameters.get(PhoneHomeMetrics.JAVA_VERSION_OF_SYSTEM.getRequestParameterName()));
         assertEquals("true", parameters.get(PhoneHomeMetrics.JET_ENABLED.getRequestParameterName()));
         assertEquals("false", parameters.get(PhoneHomeMetrics.JET_RESOURCE_UPLOAD_ENABLED.getRequestParameterName()));
-        assertEquals("false", parameters.get(PhoneHomeMetrics.CP_SUBSYSTEM_ENABLED.getRequestParameterName()));
         assertEquals("false", parameters.get(PhoneHomeMetrics.DYNAMIC_CONFIG_PERSISTENCE_ENABLED.getRequestParameterName()));
+        assertEquals("false", parameters.get(PhoneHomeMetrics.UCN_ENABLED.getRequestParameterName()));
+
+        assertThat(Integer.valueOf(parameters.get(PhoneHomeMetrics.V_CPU_COUNT.getRequestParameterName()))).isPositive();
     }
 
     @Test
@@ -186,7 +187,7 @@ public class PhoneHomeTest extends HazelcastTestSupport {
 
     @Test
     public void pardotIdOverride_withEnvVar() {
-        PhoneHome phoneHome = new PhoneHome(node, "http://example.org", ImmutableMap.of("HZ_PARDOT_ID", "1234"));
+        PhoneHome phoneHome = new PhoneHome(node, "http://example.org", Map.of("HZ_PARDOT_ID", "1234"));
         Map<String, String> params = phoneHome.phoneHome(true);
         assertEquals("1234", params.get("p"));
     }
